--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ numpy==1.26.4
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 Werkzeug==3.0.1
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+simple-websocket==1.0.0 
